--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "13.0.2",
     "puppeteer": "^19.2.2",
     "react": "18.2.0",
